2005-11-18  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/producers/pipeline/pipeline.py
	(Producer.__init__): Fix stupid errors

	* flumotion/common/log.py (theFluLogObserver): Make a singleton
	normally.

	* flumotion/common/bundleclient.py (BundleLoader.getBundles):
	Fool pychecker -- for some reason it doesn't like os at the
	toplevel here.

	* flumotion/component/converters/pipeline/pipeline.py
	(Converter.__init__):
	* flumotion/component/producers/pipeline/pipeline.py
	(Producer.__init__):
	* flumotion/component/producers/soundcard/soundcard.py
	(SoundcardProducer.__init__): Don't poke config['feed'], this is
	not a property.

2005-11-16  Edward Hervey  <edward@fluendo.com>

	* flumotion/component/producers/looper/looper.py: (createComponent): 
	Fix looper pipeline.

2005-11-15  Edward Hervey  <edward@fluendo.com>

	* flumotion/component/producers/looper/looper.py: (Looper._message_cb):
	so if we loop 1 000 000 000 times we end up playing one second less.... bad !

2005-11-15  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* flumotion/component/producers/Makefile.am
	* flumotion/component/producers/looper/Makefile.am
	* flumotion/component/producers/looper/__init__.py
	* flumotion/component/producers/looper/looper.xml	
	* flumotion/component/producers/looper/looper.py: (createComponent): 
	Added looper element for ogg/vorbis/theora. Loops the entire file.

2005-11-14  Michael Smith <msmith@fluendo.com>

	* flumotion/launch/main.py:
	  Make flumotion-launch work again by importing flumotion.configure
	  before using it.

2005-11-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/log.py:
	  make theFluLogObserver a singleton
	  add ignoreErrors and clearIgnores so we can ignore PB-related
	  tracebacks from trial
	* flumotion/test/test_pb.py:
	  use these new methods to remove the stray prints

2005-11-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* po/nl.po:
	* po/no.po: